--- a/src/style.css
+++ b/src/style.css
@@ -6,9 +6,14 @@ li {
   list-style: none;
   text-align: center;
 }
+img {
+  display: block;
+  margin: 0 auto;
+  max-width: 75px;
+}
 small {
   padding: 20px;
-  line-height: 50px;
+  line-height: 100px;
 }
 
 .stats {
