--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,23 @@
+body {
+  background-color: #fff;
+  font-family: "Noto Sans", sans-serif;
+  color: #0dcaf0;
+}
 h1 {
   text-align: center;
-  margin-left: 40px;
+  margin: 30px auto;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 30px;
+}
+ul {
+  margin: 0;
+  padding: 0;
 }
 li {
   list-style: none;
   text-align: center;
+  font-size: 14px;
 }
 img {
   display: block;
@@ -12,14 +25,19 @@ img {
   max-width: 75px;
 }
 small {
-  padding: 20px;
-  line-height: 100px;
+  line-height: 50px;
+  padding: 10px;
 }
 
 .weather-app {
   border: 4px solid pink;
+  border-radius: 7px;
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 25px;
 }
 
 .stats {
   text-align: center;
+  font-size: 14px;
 }
