--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
 h1 {
   text-align: center;
   margin: 30px auto;
-  font-size: 24px;
+  font-size: 34px;
   font-weight: 100;
   line-height: 30px;
 }
@@ -24,20 +24,31 @@ img {
   margin: 0 auto;
   max-width: 75px;
 }
-small {
-  line-height: 50px;
-  padding: 10px;
+hr {
+  border-top: 5px solid #0dcaf0;
 }
-
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
 .weather-app {
   border: 4px solid pink;
   border-radius: 7px;
-  max-width: 600px;
-  margin: 30px auto;
   padding: 25px;
 }
 
+.temperature {
+  font-size: 30px;
+  font-weight: 900;
+}
+.description {
+  font-size: 16px;
+}
+.date {
+  font-size: 12px;
+}
 .stats {
   text-align: center;
-  font-size: 14px;
+  font-size: 10px;
+  margin-top: 40px;
 }
