--- a/src/style.css
+++ b/src/style.css
@@ -36,10 +36,20 @@ hr {
   border-radius: 7px;
   padding: 25px;
 }
-
+.weather-temperature {
+  margin-right: -28px;
+}
 .temperature {
   font-size: 30px;
-  font-weight: 900;
+}
+.temperature strong {
+  font-size: 50px;
+  font-weight: 400;
+}
+.units {
+  position: relative;
+  font-size: 12px;
+  top: -25px;
 }
 .description {
   font-size: 16px;
