Included date function

--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,11 @@ hr {
   text-transform: capitalize;
 }
 .date {
-  font-size: 12px;
+  font-size: 9px;
+}
+
+.date:first-letter {
+  text-transform: capitalize;
 }
 .stats {
   text-align: center;
