--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,9 @@ img {
 hr {
   border-top: 5px solid #0dcaf0;
 }
+a {
+  text-decoration: none;
+}
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -68,4 +71,8 @@ hr {
   text-align: center;
   font-size: 10px;
   margin-top: 40px;
+}
+.footnote {
+  font-size: 10px;
+  color: slategrey;
 }
