--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,9 @@ body {
 }
 h1 {
   text-align: center;
+  padding-top: 10px;
   margin: 30px auto;
-  font-size: 34px;
+  font-size: 40px;
   font-weight: 100;
   line-height: 30px;
 }
