--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ img {
   max-width: 75px;
 }
 hr {
-  border-top: 5px solid #0dcaf0;
+  border-top: 3px solid #0dcaf0;
 }
 a {
   text-decoration: none;
@@ -73,6 +73,22 @@ a {
   text-align: center;
   font-size: 10px;
   margin-top: 40px;
+}
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+.forecast-day {
+  font-size: 14px;
+  margin-bottom: 15px;
+  opacity: 0.7;
+}
+.weather-forecast-temperatures {
+  font-size: 12px;
+  margin-top: 15px;
+}
+.weather-forecast-temperature-min {
+  opacity: 0.7;
 }
 .footnote {
   font-size: 10px;
