--- a/src/style.css
+++ b/src/style.css
@@ -41,10 +41,15 @@ a {
   padding: 25px;
   background-color: #f8f8f8;
 }
-
 .weather-temperature {
   margin-right: -28px;
 }
+.btn-default {
+  opacity: 0.6;
+  border: 1px solid #94999c;
+  background-color: white;
+}
+
 .temperature {
   font-size: 30px;
 }
