Retrieved daily forecast data from axios

--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,8 @@ a {
 }
 .weather-forecast {
   margin-top: 20px;
+  margin-left: 70px;
+  margin-right: 2ß0px;
   text-align: center;
 }
 .forecast-day {
