Amended JS file

--- a/src/style.css
+++ b/src/style.css
@@ -82,7 +82,7 @@ a {
 .weather-forecast {
   margin-top: 20px;
   margin-left: 70px;
-  margin-right: 2ß0px;
+  margin-right: 20px;
   text-align: center;
 }
 .forecast-day {
